add resume prospect

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ QUERY_PORT=27025
 # ===== Server Settings =====
 SERVER_NAME=My ICARUS Server
 MAX_PLAYERS=8
+RESUME_PROSPECT=true
+LAST_PROSPECT_NAME=YourProspectName
 
 # ===== Security =====
 JOIN_PASSWORD=
