add some important config params

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,16 @@ QUERY_PORT=27025
 # ===== Server Settings =====
 SERVER_NAME=My ICARUS Server
 MAX_PLAYERS=8
-RESUME_PROSPECT=true
+RESUME_PROSPECT=True
 LAST_PROSPECT_NAME=YourProspectName
+
+# Server auto-shutdown settings (in seconds, -1 = never shutdown)
+SHUTDOWN_IF_NOT_JOINED_FOR=-1
+SHUTDOWN_IF_EMPTY_FOR=-1
+
+# Prospect permissions
+ALLOW_NON_ADMINS_LAUNCH_PROSPECTS=True
+ALLOW_NON_ADMINS_DELETE_PROSPECTS=False
 
 # ===== Security =====
 JOIN_PASSWORD=
